kubernetes/manifests/duplicati/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duplicati
  labels:
    name: duplicati
