kubernetes/manifests/duplicati/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicati
  namespace: duplicati
  labels:
    app: duplicati
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: duplicati
  template:
    metadata:
      labels:
        app: duplicati
    spec:
      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 0
      nodeSelector:
        kubernetes.io/hostname: slave01
      containers:
        - name: duplicati-container
          image: linuxserver/duplicati:2.3.0
          securityContext:
            fsGroupChangePolicy: "OnRootMismatch"
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8200
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              memory: 17345Mi
              cpu: "4"
          volumeMounts:
            - name: nfs-retain-pvc
              mountPath: /config
              subPath: "./duplicati-config"
            - name: temp
              mountPath: /run/duplicati-temp
            - name: nfs-retain-pvc
              mountPath: /backups/nfs/kuberenetes-retain
              subPath: "."
      imagePullSecrets:
        - name: dockerhub-token
      volumes:
        - name: temp
          emptyDir:
            sizeLimit: 50Gi
        - name: nfs-retain-pvc
          persistentVolumeClaim:
            claimName: nfs-retain-pvc
