kubernetes/manifests/duplicati/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: duplicati
  labels:
    app: duplicati
spec:
  selector:
    app: duplicati
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8200
      name: http
  type: ClusterIP
