kubernetes/manifests/duplicati/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duplicati-http-route
  namespace: duplicati
  annotations:
    external-dns.alpha.kubernetes.io/hostname: backup.nullservers.com
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "backup.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: duplicati
          port: 80
