kubernetes/manifests/duplicati/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  namespace: duplicati
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ftp.nullservers.com
        - matchName: api.telegram.org
        - matchName: nfs.nullservers.com
    - toCIDRSet:
        - cidr: 192.168.20.56/32
        ## RASPI
        - cidr: 192.168.20.103/32
